---------------------------------------------------------------------------------------------------
Version: 1.2.17
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.16
Date: 2025-03-18
  Changes:
    - Incompatility mark added for MT-lib.
---------------------------------------------------------------------------------------------------
Version: 1.2.15
Date: 2025-03-16
  Changes:
    - Performance improvement to the cargo pod restriction technology feature.
---------------------------------------------------------------------------------------------------
Version: 1.2.14
Date: 2025-03-16
  Changes:
    - If the 'type = "nothing"' effect is removed from a given cargo drops technology, PlanetsLib will no longer enforce that this technology must be researched to perform cargo drops.
---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: 2025-03-12
  Changes:
    - Compatibility fix to handle the case where the vanilla lab has duplicate science packs listed in its inputs.
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 2025-03-03
  Graphics:
    - Fixed positioning of corner icons in discovery technologies.
  Locale:
    - Russian locale update.
---------------------------------------------------------------------------------------------------
Version: 1.2.11
Date: 2025-02-26
  Changes:
    - Fixed a crash on missing 'deepcopy' field.
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: 2025-02-24
  Changes:
    - Added an icon intended to represent item and recipes used only in ResearchProgressProducts.
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 2025-02-18
  Locale:
    - French localization added.