@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.17
 Date: ????
-  Changes:
+  Info:
+    - Added Space Age tag.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.16
 Date: 2025-03-18
